Fix sidebar issues and icon wrapping

--- a/frontend/src/components/atoms/ModuleCard/style.module.scss
+++ b/frontend/src/components/atoms/ModuleCard/style.module.scss
@@ -30,7 +30,6 @@
   padding: 0.5rem;
   display: flex;
   justify-content: space-between;
-  font-size: 1.125rem;
 }
 
 .moduleCard :global(.card-body) {
