--- a/frontend/src/components/organisms/LeftBar/style.module.scss
+++ b/frontend/src/components/organisms/LeftBar/style.module.scss
@@ -7,8 +7,8 @@
   display: block;
   top: 0;
   left: 0;
-  width: 250px;
-  height: calc(100vh - 61px);
+  width: 15.625rem;
+  height: calc(100vh - 	3.8125rem);
 
   overflow-y: auto;
   overflow-x: hidden;
@@ -19,7 +19,7 @@
   transition: visibility 0.5s ease-in-out, transform 0.5s ease-in-out;
   
   z-index: 5000;
-  margin-top: 61px;
+  margin-top: 3.8125rem;
   padding-bottom: 1.875rem;
   background: #fff;
   box-shadow: 0 0.125rem 0.625rem 0 rgba(0, 0, 0, 0.1);
