--- a/frontend/src/components/pages/ModuleFeedback/style.module.scss
+++ b/frontend/src/components/pages/ModuleFeedback/style.module.scss
@@ -8,9 +8,8 @@
   margin-top: 1rem;
 }
 
-.assessmentIcons > * {
-	margin-right: .5rem;
-	height: 1.125rem;
+.assessmentResult{
+	float: right;
 }
 
 .searchBar {
