--- a/frontend/src/components/pages/ModuleResources/style.module.scss
+++ b/frontend/src/components/pages/ModuleResources/style.module.scss
@@ -9,10 +9,10 @@
 }
 
 .searchBar {
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   background-color: $gray-100;
-	border-color: $gray-100;
-	transition: 0.2s background-color;
+  border-color: $gray-100;
+  transition: 0.2s background-color;
   -webkit-transition: 0.2s background-color;
   -moz-transition: 0.2s back-ground-color;
 }
@@ -22,22 +22,22 @@
   opacity: 1;
 }
 
-.searchBar:focus + :global(.input-group-append) .searchBarIcon{
-	box-shadow: none !important;
-	border-left: none;
+.searchBar:focus + :global(.input-group-append) .searchBarIcon {
+  box-shadow: none !important;
+  border-left: none;
   border-color: $gray-300;
-	background-color: $white;
+  background-color: $white;
 }
 
-.searchBar:focus{
-	box-shadow: none !important;
-	border-right: none;
+.searchBar:focus {
+  box-shadow: none !important;
+  border-right: none;
   border-color: $gray-300;
-	background-color: $white;
+  background-color: $white;
 }
 
 .searchBarIcon {
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   background-color: $gray-100;
   border-color: $gray-100;
   color: $gray-500;
@@ -62,7 +62,7 @@
 
 .quickViewCard {
   margin-top: 1.25rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   border-color: $gray-300;
   transition: transform 0.2s;
 }
@@ -95,8 +95,8 @@
 }
 
 .quickViewCard :global(.card-img-top) {
-  border-top-left-radius: .5rem;
-  border-top-right-radius: .5rem;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 
 $blue-tag-background: transparentize($blue-100, 0.5);
@@ -104,10 +104,10 @@ $teal-tag-background: transparentize($teal-100, 0.5);
 
 .quickViewTag {
   text-transform: uppercase;
-  font-size: .8rem;
+  font-size: 0.8rem;
   font-weight: 500;
-  border-radius: .33rem;
-  margin-right: .5rem;
+  border-radius: 0.33rem;
+  margin-right: 0.5rem;
 }
 
 .tagBlue {
@@ -121,7 +121,7 @@ $teal-tag-background: transparentize($teal-100, 0.5);
 }
 
 .folderCard {
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   transition: transform 0.2s;
   margin-top: 0.67rem;
 }
